--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@forge/api": "^6.1.5",
-    "@forge/resolver": "1.7.1",
+    "@forge/resolver": "^1.7.1",
     "@forge/storage": "^2.0.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "^4.22.0",
