--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@forge/storage": "^2.0.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "^4.22.0",
+    "form-data": "^4.0.5",
     "react-charts": "^2.0.0-beta.7"
   }
 }
