feat: implement RAG-based organizational memory and smart AI simulation
- Updated prescribeSolutionHandler to fetch 'master_training_set' from storage

- Added logic to inject past verified fixes into the AI prompt context

- Upgraded callOpenAI simulation to dynamically detect and reference past ticket numbers in responses

--- a/manifest.yml
+++ b/manifest.yml
@@ -118,12 +118,21 @@ modules:
           - bitbucket-oauth-v2
     - key: ith
       handler: index.ingestTelemetry
+    - key: learning-fn
+      handler: index.modelRetrainingHandler
+      providers:
+        auth:
+          - bitbucket-oauth-v2
 
   trigger:
     - key: issue-created-trigger
       function: trigger-fn
       events:
         - avi:jira:created:issue
+    - key: issue-updated-trigger
+      function: learning-fn
+      events:
+        - avi:jira:updated:issue
   
 
   # ✅ Global Page (The "Emergency Entrance" for Login)
